# deeplearn

./: .gitignore  README.md  grade.py  pyproject.toml
01_test/: 1_rules.ipynb  2_logreg.ipynb  2_logreg.p
02_mlp/: 1_mlp_pytorch.ipynb  2_mlp.pth  2_mlp_numpy.ipynb
03_cnn/: 1_lenet.ipynb  1_lenet5.pth  2_vgg.ipynb  2_vgg_net.pth  3_resnet.ipynb  3_resnet.pth
04_reg/: 1_regtools.ipynb  2_recommender.ipynb  mlp_dropout.pth  mlp_early.pth  mlp_noiseinj.pth  mlp_noreg.pth  mlp_small.pth  mlp_wd.pth  recsys.pth
05_rnn/: 1_rnn.ipynb
06_transformer/: 1_transformer.ipynb
07_gnn/: 1_gnn.ipynb  1_gnn.pth
08_ae/: 1_autoencoders.ipynb  2_dae.ipynb  3_vae.ipynb
09_gan/: 1_dcgan.ipynb  2_wgan_gp.ipynb
10_ar/: 1_pixelcnn.ipynb  2_cond_pixelcnn.ipynb
11_fewshot/: 1_pn.ipynb
