[tool.poetry]
name = "deeplearn-template"
version = "0.1.0"
description = ""
authors = ["Aarni Halinen <aarni.halinen@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
torch = "^1.7.1"
defaults = "^0.3.0"
matplotlib = "^3.3.4"
nbstripout = "^0.3.9"
numpy = "^1.20.1"
pandas = "^1.2.3"
Pillow = "^8.1.1"
pytest = "^6.2.2"
scikit-learn = "^0.24.1"
scipy = "^1.6.1"
torchvision = "^0.8.2"
torchtext = "^0.8.1"
jupyter = "^1.0.0"
nbgrader = "^0.6.1"
nbval = "^0.9.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
